Update to Minecraft 1.21.11 (Paper), Java 21, Skript 2.16; add features + hardening
Platform/build:
- paper-api 1.21.11, Java 21 toolchain, Skript 2.16, bungeecord 1.21-R0.4,
  velocity 3.4, Gradle 9.6.1, com.gradleup.shadow (johnrengelman was dead).
- Skript API migration (Getter->Converter event values, ParserInstance.isCurrentEvent).
- Remove phantom BungeeSK-Universal module; delete dead EffectSection/ReflectionUtils
  (the latter's ".v" package parse crashed on modern unversioned-CraftBukkit Paper).
- Clean two-jar output: BungeeSK.jar (game servers + BungeeCord), BungeeSK-Velocity.jar.

Security:
- ObjectInputFilter whitelist on every socket read (bukkit/bungee/velocity + PacketUtils),
  closing a pre-authentication Java-deserialization RCE vector.

Features:
- Auto-reconnect with exponential backoff; connection state expression; reconnect effect;
  disconnect now also disables reconnect; wrong password stops the loop.
- Game-server config.yml with auto-connect (BungeeSKConfig).
- Hex + MiniMessage colors on both proxies (Velocity native; BungeeCord via a shaded,
  relocated Adventure so it can't clash with Paper's own Adventure).

Fixes/perf:
- AutoUpdater sends a User-Agent (was silently 403'd) and is fail-safe.
- Shared async thread pool instead of a thread per packet; serialized socket writes;
  idempotent disconnect; URI instead of deprecated URL(String).

Runtime-tested end-to-end on Paper 1.21.11 + Velocity 3.5.1 + BungeeCord.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>