@@ -12,7 +12,6 @@ import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.net.InetAddress;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -75,7 +74,7 @@ public class PingUtils {
 
     private static Favicon generateFavicon(String url) {
         try {
-            final BufferedImage image = ImageIO.read(new URL(url));
+            final BufferedImage image = ImageIO.read(java.net.URI.create(url).toURL());
             return Favicon.create(image);
 
         } catch (IOException ignored) {
